# pico-usb2sd

./: .gitmodules  CMakeLists.txt  flake.nix  main.c  tusb_config.h
